--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -36,3 +36,14 @@
     transform: rotate(360deg);
   }
 }
+
+[data-theme="light"] {
+  background-color: #fff;
+  color: #000;
+}
+
+[data-theme="dark"] {
+  background-color: #0d0d18;
+  color: #fff;
+}
+
