--- a/frontend/src/assets/css/base.css
+++ b/frontend/src/assets/css/base.css
@@ -75,3 +75,52 @@ a:hover, .nav-link:hover, .btn-light:hover, .btn-outline-light:hover {
   object-fit: cover; /* coupe un peu les bords mais garde un rendu uniforme */
   border-radius: 20px;
 }
+
+/* src/styles/theme.css */
+
+/* Thème clair */
+body[data-theme="light"] {
+  background-color: #f5f7fb;
+  color: #000;
+}
+
+body[data-theme="light"] main {
+  background-color: #fff;
+  color: #000;
+}
+
+/* Sidebar clair */
+body[data-theme="light"] aside {
+  background-color: #103e6e;
+  color: white;
+}
+
+/* Thème sombre */
+body[data-theme="dark"] {
+  background-color: #0e1216;
+  color: #f5f5f5;
+}
+
+body[data-theme="dark"] main {
+  background-color: #1e1e2f;
+  color: #fff;
+}
+
+/* Sidebar sombre */
+body[data-theme="dark"] aside {
+  background-color: #0b223d;
+  color: #fff;
+}
+
+/* Pour la topbar sombre */
+body[data-theme="dark"] .topbar {
+  background-color: #222;
+  color: #fff;
+}
+
+/* Pour la topbar claire */
+body[data-theme="light"] .topbar {
+  background-color: #fff;
+  color: #000;
+}
+
